# galcry

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac
doc/: .gitignore  galcry.texi  version.texi
doc/galcry/: galpol.texi  intro.texi  licenses.texi
inc/: all_config.h  cmdline.h  stringutils.h
inc/backend/: gamestate.h  lexicon.h  lloyd.h  voronoi.h
inc/gui/: a4f.h  loop.h  utils.h
libobj/: malloc.c
m4/: .gitignore
pkgdatadir/: .gitignore  Makefile.am
pkgdatadir/lexicon/: gismu  kanmanla  latin  tagalog
src/: cmdline.c  main.c
src/backend/: gamestate.c  lexicon.c  lloyd.c  main.c  voronoi.cxx
src/gui/: a4f.c  loop.c  main.c  utils.c
src/stringutils/: austr.c  mapping.c  stringhash.c  wordsplit.c
ustr/: COPYING  Makefile.am
