# ustr/Makefile.am - Compilation control file to build ustr library.
# Copyright (C) 2013 Alan Manuel K. Gloria
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

noinst_LIBRARIES = libustr.a

libustr_a_SOURCES = \
  ustr-b-opt-code.c \
  ustr-cmp-opt-code.c \
  ustr-fmt-opt-code.c \
  ustr-ins-opt-code.c \
  ustr-io-opt-code.c \
  ustr-main-opt-code.c \
  ustr-parse-opt-code.c \
  ustr-pool-opt-code.c \
  ustr-replace-opt-code.c \
  ustr-sc-opt-code.c \
  ustr-set-opt-code.c \
  ustr-split-opt-code.c \
  ustr-spn-opt-code.c \
  ustr-srch-opt-code.c \
  ustr-sub-opt-code.c \
  ustr-utf8-opt-code.c

EXTRA_DIST = COPYING LICENSE_LGPL LICENSE_BSD LICENSE_MIT
