# ustr/Makefile.am - Compilation control file to build ustr library.
# Copyright (C) 2013 Alan Manuel K. Gloria
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

noinst_LIBRARIES = libustr.a

libustr_a_SOURCES = \
  ustr-b-opt-code.c \
  ustr-cmp-opt-code.c \
  ustr-fmt-opt-code.c \
  ustr-ins-opt-code.c \
  ustr-io-opt-code.c \
  ustr-main-opt-code.c \
  ustr-parse-opt-code.c \
  ustr-pool-opt-code.c \
  ustr-replace-opt-code.c \
  ustr-sc-opt-code.c \
  ustr-set-opt-code.c \
  ustr-split-opt-code.c \
  ustr-spn-opt-code.c \
  ustr-srch-opt-code.c \
  ustr-sub-opt-code.c \
  ustr-utf8-opt-code.c \
  malloc-check.h \
  ustr-b-code.h \
  ustr-b.h \
  ustr-cmp-code.h \
  ustr-cmp.h \
  ustr-cmp-internal.h \
  ustr-cntl-code.h \
  ustr-cntl.h \
  ustr-compiler.h \
  ustr-conf.h \
  ustr-fmt-code.h \
  ustr-fmt.h \
  ustr-fmt-internal.h \
  ustr.h \
  ustr-ins-code.h \
  ustr-ins.h \
  ustr-ins-internal.h \
  ustr-io-code.h \
  ustr-io.h \
  ustr-io-internal.h \
  ustr-main-code.h \
  ustr-main.h \
  ustr-main-internal.h \
  ustr-parse-code.h \
  ustr-parse.h \
  ustr-pool-code.h \
  ustr-pool.h \
  ustr-replace-code.h \
  ustr-replace.h \
  ustr-replace-internal.h \
  ustr-sc-code.h \
  ustr-sc.h \
  ustr-sc-internal.h \
  ustr-set-code.h \
  ustr-set.h \
  ustr-set-internal.h \
  ustr-split-code.h \
  ustr-split.h \
  ustr-split-internal.h \
  ustr-spn-code.h \
  ustr-spn.h \
  ustr-srch-code.h \
  ustr-srch.h \
  ustr-srch-internal.h \
  ustr-sub-code.h \
  ustr-sub.h \
  ustr-sub-internal.h \
  ustr-utf8-code.h \
  ustr-utf8.h \
  ustr-utf8-internal.h

EXTRA_DIST = COPYING LICENSE_LGPL LICENSE_BSD LICENSE_MIT
